html class added

--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -93,7 +93,7 @@
     justify-content: space-between;
     cursor: pointer;
 
-    & h2 {
+    &--heading {
       font-size: $fs-question;
       font-weight: 400;
     }
