--- a/scss/pages/_home.scss
+++ b/scss/pages/_home.scss
@@ -5,6 +5,7 @@
     background-color: $color-white;
     border-radius: 20px;
     position: relative;
+    margin-top: 4rem;
   }
 
   &-container {
